-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.1, 5.2.0
-
OS X 10.8.1, Windows 7
-
Windows: 225ada44ebb2f2ddc0efb29b1a93c09661653837. (stable, 27.3.14, 5.3); OSX: a6bf169479df40f489fed549c893958f2519010e
Issue 1:
Environments: OS X 10.8.1, Windows 7
Description
When maximized and fullscreen requested, the window transitions to normal before entering fullscreen.
Steps to reproduce the issue:
- Launch fullscreentest_v1.zip
test program. - Click the "Maximized" button.
- Click the "FullScreen" button.
Result
The application window is set to normal mode and then changes to fullscreen mode. This is also noticeable in the Application Output window as the application logs all window state changes (0 = Normal, 2 = Maximized, and 4 = FullScreen). On OS X, the problem is clearly visible in the sample application. On Windows, the problem is only visible for complex QML applications.
Expected Result
The application window would be set to fullscreen mode without being set to normal mode.
Issue 2:
Environments: OS X 10.8.1
Description
When in full screen mode and maximized requested, the windows goes to normal mode on OS X. It happens on Windows system too.
Steps to reproduce the issue:
- Launch fullscreentest_v1.zip
test program. - Click the "FullScreen" button.
- Click the "Maximized" button.
Result
The application window is set to normal mode.
Expected Result
The application would be set to maximized mode.
Issue 3:
Environments: Windows 7.
Description
When in fullscreen mode and maximized requested, the windows goes to normal mode before transitioning to maximized mode on Windows.
Steps to reproduce the issue:
- Launch fullscreentest_v1.zip
test program. - Click the "FullScreen" button.
- Click the "Maximized" button.
Result
The application window is set to normal mode and then changes to fullscreen mode. This is also noticeable in the Application Output window as the application logs all window state changes (0 = Normal, 2 = Maximized, and 4 = FullScreen).
Expected Result
The test program window would be set to maximized mode without being set to normal mode.
- relates to
-
QTBUG-36714 Window can't be fully closed on Mac OS X after calling showFullScreen()
-
- Closed
-
-
QTBUG-37695 showMinimized() misbehave when called from closeEvent under Linux/X11
-
- Closed
-
-
QTBUG-37703 MacOS: isMaximized broken (regression), hence saveGeometry too
-
- Closed
-
| For Gerrit Dashboard: QTBUG-35166 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 81381,4 | X11: don't assume the window has "normal" state by default | stable | qt/qtbase | Status: ABANDONED | +2 | 0 |
| 81510,3 | OSX: make reported window state consistent with reality | stable | qt/qtbase | Status: MERGED | +2 | 0 |