src/plugins/platforms/cocoa/qcocoawindow.h
@@ -252,6 +252,7 @@ public: // for QNSView
     QList<QCocoaWindow *> m_childWindows;
 
     Qt::WindowFlags m_windowFlags;
+    bool m_effectivelyMaximized;
     Qt::WindowState m_synchedWindowState;
     Qt::WindowModality m_windowModality;
     QPointer<QWindow> m_activePopupWindow;
