src/plugins/platforms/cocoa/qnsview.mm
@@ -281,6 +281,12 @@ static QTouchDevice *touchDevice = 0;
 
 - (void)notifyWindowStateChanged:(Qt::WindowState)newState
 {
+    // If the window was maximized, then fullscreen, then tried to go directly to "normal" state,
+    // this notification will say that it is "normal", but it will still look maximized, and
+    // if you called performZoom it would actually take it back to "normal".
+    // So we should say that it is maximized because it actually is.
+    if (newState == Qt::WindowNoState && m_platformWindow->m_effectivelyMaximized)
+        newState = Qt::WindowMaximized;
     QWindowSystemInterface::handleWindowStateChanged(m_window, newState);
     // We want to read the window state back from the window,
     // but the event we just sent may be asynchronous.
@@ -346,6 +352,8 @@ static QTouchDevice *touchDevice = 0;
 - (void)notifyWindowWillZoom:(BOOL)willZoom
 {
     Qt::WindowState newState = willZoom ? Qt::WindowMaximized : Qt::WindowNoState;
+    if (!willZoom)
+        m_platformWindow->m_effectivelyMaximized = false;
     [self notifyWindowStateChanged:newState];
 }
 
